# simplemath

./: CMakeLists.txt  LICENSE  README.md
cmake/: simplemath-config.cmake.in
include/: simplemath.h
src/: CMakeLists.txt  simplemath.cpp
